@@ -26,4 +26,4 @@ resources:
   license: http://dev.perl.org/licenses/
   repository: http://perl5.git.perl.org/perl.git/tree/HEAD:/dist/Locale-Maketext
   x_MailingList: http://lists.perl.org/list/perl5-porters.html
-version: 1.19_01
+version: 1.21
